--- a/index.html
+++ b/index.html
@@ -171,33 +171,33 @@
                 <h2 class="section__title">Наша команда</h2>
                 <ul class="team__list">
                     <li class="member">
-                        <img class="member__image" src="./images/product_designer.jpg" alt="Дизайнер" width="270" height="260">
+                        <img class="member__image" src="./images/product_designer.jpg" alt="Дизайнер" width="270">
                         <div class="member__info">
                             <h3 class="member__name">Игорь Демьяненко</h3>
                             <p class="member__position">Product Designer</p>
                             <ul class="member__socials">
-                                <li class="social">
+                                <li class="social member__social">
                                     <a class="social__link member__social-link" href="#">
                                         <svg class="social__icon" width="20" height="20">
                                             <use href="./images/icons.svg#instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li class="social">
+                                <li class="social member__social">
                                     <a class="social__link member__social-link" href="#">
                                         <svg class="social__icon" width="20" height="20">
                                             <use href="./images/icons.svg#twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li class="social">
+                                <li class="social member__social">
                                     <a class="social__link member__social-link" href="#">
                                         <svg class="social__icon" width="20" height="20">
                                             <use href="./images/icons.svg#facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li class="social">
+                                <li class="social member__social">
                                     <a class="social__link member__social-link" href="#">
                                         <svg class="social__icon" width="20" height="20">
                                             <use href="./images/icons.svg#linkedin"></use>
@@ -211,33 +211,33 @@
 
                     </li>
                     <li class="member">
-                        <img class="member__image" src="./images/frontend_developer.jpg" alt="Фронтенд разработчик" width="270" height="260">
+                        <img class="member__image" src="./images/frontend_developer.jpg" alt="Фронтенд разработчик" width="270">
                         <div class="member__info">
                             <h3 class="member__name">Ольга Репина</h3>
                             <p class="member__position">Frontend Developer</p>
                             <ul class="member__socials">
-                                <li class="social">
+                                <li class="social member__social">
                                     <a class="social__link member__social-link" href="#">
                                         <svg class="social__icon" width="20" height="20">
                                             <use href="./images/icons.svg#instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li class="social">
+                                <li class="social member__social">
                                     <a class="social__link member__social-link" href="#">
                                         <svg class="social__icon" width="20" height="20">
                                             <use href="./images/icons.svg#twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li class="social">
+                                <li class="social member__social">
                                     <a class="social__link member__social-link" href="#">
                                         <svg class="social__icon" width="20" height="20">
                                             <use href="./images/icons.svg#facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li class="social">
+                                <li class="social member__social">
                                     <a class="social__link member__social-link" href="#">
                                         <svg class="social__icon" width="20" height="20">
                                             <use href="./images/icons.svg#linkedin"></use>
@@ -249,33 +249,33 @@
 
                     </li>
                     <li class="member">
-                        <img class="member__image" src="./images/marketing.jpg" alt="Маркетолог" width="270" height="260">
+                        <img class="member__image" src="./images/marketing.jpg" alt="Маркетолог" width="270">
                         <div class="member__info">
                             <h3 class="member__name">Николай Тарасов</h3>
                             <p class="member__position">Marketing</p>
                             <ul class="member__socials">
-                                <li class="social">
+                                <li class="social member__social">
                                     <a class="social__link member__social-link" href="#">
                                         <svg class="social__icon" width="20" height="20">
                                             <use href="./images/icons.svg#instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li class="social">
+                                <li class="social member__social">
                                     <a class="social__link member__social-link" href="#">
                                         <svg class="social__icon" width="20" height="20">
                                             <use href="./images/icons.svg#twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li class="social">
+                                <li class="social member__social">
                                     <a class="social__link member__social-link" href="#">
                                         <svg class="social__icon" width="20" height="20">
                                             <use href="./images/icons.svg#facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li class="social">
+                                <li class="social member__social">
                                     <a class="social__link member__social-link" href="#">
                                         <svg class="social__icon" width="20" height="20">
                                             <use href="./images/icons.svg#linkedin"></use>
@@ -287,33 +287,33 @@
 
                     </li>
                     <li class="member">
-                        <img class="member__image" src="./images/ui_designer.jpg" alt="ЮИ Дизайнер" width="270" height="260">
+                        <img class="member__image" src="./images/ui_designer.jpg" alt="ЮИ Дизайнер" width="270">
                         <div class="member__info">
                             <h3 class="member__name">Михаил Ермаков</h3>
                             <p class="member__position">UI Designer</p>
                             <ul class="member__socials">
-                                <li class="social">
+                                <li class="social member__social">
                                     <a class="social__link member__social-link" href="#">
                                         <svg class="social__icon" width="20" height="20">
                                             <use href="./images/icons.svg#instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li class="social">
+                                <li class="social member__social">
                                     <a class="social__link member__social-link" href="#">
                                         <svg class="social__icon" width="20" height="20">
                                             <use href="./images/icons.svg#twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li class="social">
+                                <li class="social member__social">
                                     <a class="social__link member__social-link" href="#">
                                         <svg class="social__icon" width="20" height="20">
                                             <use href="./images/icons.svg#facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li class="social">
+                                <li class="social member__social">
                                     <a class="social__link member__social-link" href="#">
                                         <svg class="social__icon" width="20" height="20">
                                             <use href="./images/icons.svg#linkedin"></use>
