--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
 
 <body>
 
-    <header class="header">
+    <!-- <header class="header">
         <div class="header__container container">
             <nav class="nav">
                 <a class="nav__logo header__logo" href="./index.html"><span>Web</span>Studio</a>
@@ -53,7 +53,7 @@
                 </li>
             </ul>
         </div>
-    </header>
+    </header> -->
 
     <main>
         <section class="section">
@@ -228,7 +228,7 @@
             </div>
         </section>
     </main>
-
+<!-- 
     <footer class="footer">
         <div class="footer__container container">
             <div class="address-block">
@@ -285,7 +285,7 @@
                 </form>
             </div>
         </div>
-    </footer>
+    </footer> -->
 
 </body>
 
