--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="header__container container">
             <nav class="nav">
                 <a class="nav__logo header__logo" href="./index.html"><span>Web</span>Studio</a>
-                <button class="nav__button" type="button" aria-expanded="false" data-menu-open>
+                <button class="nav__button" type="button" aria-label="Открыть мобильное меню" aria-expanded="false" data-menu-open>
                     <svg class="nav__menu" width="40" height="40" aria-label="Открыть мобильное меню">
                         <use href="./images/icons.svg#menu-open"></use>
                     </svg>
@@ -67,8 +67,8 @@
                             <li class="nav__social-link"><a href="#">LinkedIn</a></li>
                         </ul>
                     </div>
-                    <button class="nav__button nav__button-close" type="button" aria-expanded="false" data-menu-close>
-                        <svg class="nav__menu-close" width="19" height="19" aria-label="Открыть мобильное меню">
+                    <button class="nav__button nav__button-close" type="button" aria-label="Закрыть мобильное меню" aria-expanded="false" data-menu-close>
+                        <svg class="nav__menu-close" width="19" height="19" aria-label="Закрыть мобильное меню">
                             <use href="./images/icons.svg#menu-close"></use>
                         </svg>
                     </button>
@@ -83,7 +83,7 @@
         <section class="hero section">
             <div class="hero__container container">
                 <h1 class="hero__title">Эффективные решения для вашего бизнеса</h1>
-                <button class="hero__button button" type="button" data-modal-open>Заказать услугу</button>
+                <button class="hero__button button" type="button" aria-label="Заказать услугу" data-modal-open>Заказать услугу</button>
             </div>
         </section>
 
@@ -437,7 +437,7 @@
                 <p class="footer__subscribe-text">Подпишитесь на рассылку</p>
                 <form class="footer__subscribe-form">
                     <input class="footer__subscribe-input" id="email" name="email" type="text" placeholder="E-mail">
-                    <button class="footer__subscribe-button button" type="submit">Подписаться</button>
+                    <button class="footer__subscribe-button button" aria-label="Подписаться" type="submit">Подписаться</button>
                 </form>
             </div>
         </div>
@@ -445,7 +445,7 @@
 
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
-            <button class="modal__close-btn" data-modal-close>
+            <button class="modal__close-btn" aria-label="Закрыть модальное окно" data-modal-close>
                 <svg class="modal__close-btn-svg" width="18" height="18">
                     <use href="./images/icons.svg#close"></use>
                 </svg>
@@ -493,7 +493,7 @@
                     <span class="field-checkbox__new modal__field-checkbox-new"></span>
                     <span class="field-checkbox__label">Соглашаюсь с рассылкой и принимаю <a class="field-checkbox__policy" href="#">Условия договора</a></span>          
                 </label>
-                <button class="button contact-form__button modal__form-button" type="submit">Отправить</button>
+                <button class="button contact-form__button modal__form-button" aria-label="Отправить данные" type="submit">Отправить</button>
 
             </form>
         </div>
