--- a/index.html
+++ b/index.html
@@ -144,19 +144,43 @@
                 <h2 class="section__title">Чем мы занимаемся</h2>
                 <ul class="product__list">
                     <li class="product__category">
-                        <img class="product__image" src="./images/box1.jpg" alt="Ноутбук" width="370" height="294">
+
+                        <img
+                            class="product__image"
+                            srcset="./images/box1.jpg 1x, ./images/box1@2x.jpg 2x"
+                            src="./images/box1.jpg"
+                            alt="Ноутбук"
+                            width="370" height="294"
+                        />
+
                         <div class="product__name">
                             <p class="product__text">Десктопные приложения</p>
                         </div> 
                     </li>
                     <li class="product__category">
-                        <img class="product__image" src="./images/box2.jpg" alt="Смартфон" width="370" height="294">
+
+                        <img
+                            class="product__image"
+                            srcset="./images/box2.jpg 1x, ./images/box2@2x.jpg 2x"
+                            src="./images/box2.jpg"
+                            alt="Смартфон"
+                            width="370" height="294"
+                        />
+
                         <div class="product__name">
                             <p class="product__text">Мобильные приложения</p>
                         </div>
                     </li>
                     <li class="product__category">
-                        <img class="product__image" src="./images/box3.jpg" alt="Планшет" width="370" height="294">
+
+                        <img
+                            class="product__image"
+                            srcset="./images/box3.jpg 1x, ./images/box3@2x.jpg 2x"
+                            src="./images/box3.jpg"
+                            alt="Планшет"
+                            width="370" height="294"
+                        />
+
                         <div class="product__name">
                             <p class="product__text">Дизайнерские решения</p>
                         </div>
@@ -171,7 +195,15 @@
                 <h2 class="section__title">Наша команда</h2>
                 <ul class="team__list">
                     <li class="member">
-                        <img class="member__image" src="./images/product_designer.jpg" alt="Дизайнер" width="270">
+
+                        <img
+                            class="member__image"
+                            srcset="./images/product_designer.jpg 1x, ./images/product_designer@2x.jpg 2x"
+                            src="./images/product_designer.jpg"
+                            alt="Дизайнер"
+                            width="270"
+                        />
+
                         <div class="member__info">
                             <h3 class="member__name">Игорь Демьяненко</h3>
                             <p class="member__position">Product Designer</p>
@@ -211,7 +243,13 @@
 
                     </li>
                     <li class="member">
-                        <img class="member__image" src="./images/frontend_developer.jpg" alt="Фронтенд разработчик" width="270">
+                        <img
+                            class="member__image"
+                            srcset="./images/frontend_developer.jpg 1x, ./images/frontend_developer@2x.jpg 2x"
+                            src="./images/frontend_developer.jpg"
+                            alt="Фронтенд разработчик"
+                            width="270"
+                        />
                         <div class="member__info">
                             <h3 class="member__name">Ольга Репина</h3>
                             <p class="member__position">Frontend Developer</p>
@@ -249,7 +287,13 @@
 
                     </li>
                     <li class="member">
-                        <img class="member__image" src="./images/marketing.jpg" alt="Маркетолог" width="270">
+                        <img
+                            class="member__image"
+                            srcset="./images/marketing.jpg 1x, ./images/marketing@2x.jpg 2x"
+                            src="./images/marketing.jpg"
+                            alt="Маркетолог"
+                            width="270"
+                        />
                         <div class="member__info">
                             <h3 class="member__name">Николай Тарасов</h3>
                             <p class="member__position">Marketing</p>
@@ -288,6 +332,13 @@
                     </li>
                     <li class="member">
                         <img class="member__image" src="./images/ui_designer.jpg" alt="ЮИ Дизайнер" width="270">
+                        <img
+                            class="member__image"
+                            srcset="./images/ui_designer.jpg1x, ./images/ui_designer@2x.jpg 2x"
+                            src="./images/ui_designer.jpg"
+                            alt="ЮИ Дизайнер"
+                            width="270"
+                        />
                         <div class="member__info">
                             <h3 class="member__name">Михаил Ермаков</h3>
                             <p class="member__position">UI Designer</p>
