--- a/portfolio.html
+++ b/portfolio.html
@@ -94,7 +94,14 @@
                     <li class="project">
                         <a class="project__link" href="#">
                             <div class="project__discription-overlay">
-                                <img class="project__image" src="./images/example1.jpg" alt="Технокряк" width="370">
+                                <img  
+                                    srcset="./images/example1.jpg 1x, ./images/example1@2x.jpg 2x" 
+                                    class="project__image" 
+                                    src="./images/example1.jpg" 
+                                    alt="Технокряк" 
+                                    width="370"
+                                >
+
                                 <p class="project__discription">
                                     Технокряк это современная площадка распространения коронавируса. Компании используют
                                     эту
@@ -111,8 +118,16 @@
                     <li class="project">
                         <a class="project__link" href="#">
                             <div class="project__discription-overlay">
-                                <img class="project__image" src="./images/example2.jpg"
-                                    alt="Постер New Orlean vs Golden Star" width="370">
+
+                                <img 
+                                    srcset="./images/example2.jpg 1x, ./images/example2@2x.jpg 2x"
+                                    class="project__image" 
+                                    src="./images/example2.jpg"
+                                    alt="Постер New Orlean vs Golden Star" 
+                                    width="370"
+                                >
+
+
                                 <p class="project__discription">
                                     Технокряк это современная площадка распространения коронавируса. Компании используют
                                     эту
@@ -129,7 +144,14 @@
                     <li class="project">
                         <a class="project__link" href="#">
                             <div class="project__discription-overlay">
-                                <img class="project__image" src="./images/example3.jpg" alt="Ресторан Seafood" width="370">
+                                <img 
+                                    srcset="./images/example3.jpg 1x, ./images/example3@2x.jpg 2x"
+                                    class="project__image" 
+                                    src="./images/example3.jpg" 
+                                    alt="Ресторан Seafood" 
+                                    width="370"
+                                >
+
                                 <p class="project__discription">
                                     Технокряк это современная площадка распространения коронавируса. Компании используют
                                     эту
@@ -146,7 +168,14 @@
                     <li class="project">
                         <a class="project__link" href="#">
                             <div class="project__discription-overlay">
-                                <img class="project__image" src="./images/example4.jpg" alt="Проект Prime" width="370">
+                                <img 
+                                    srcset="./images/example4.jpg 1x, ./images/example4@2x.jpg 2x"
+                                    class="project__image" 
+                                    src="./images/example4.jpg" 
+                                    alt="Проект Prime" 
+                                    width="370"
+                                >
+
                                 <p class="project__discription">
                                     Технокряк это современная площадка распространения коронавируса. Компании используют
                                     эту
@@ -163,7 +192,14 @@
                     <li class="project">
                         <a class="project__link" href="#">
                             <div class="project__discription-overlay">
-                                <img class="project__image" src="./images/example5.jpg" alt="Проект Boxes" width="370">
+                                <img 
+                                    srcset="./images/example5.jpg 1x, ./images/example5@2x.jpg 2x"
+                                    class="project__image" 
+                                    src="./images/example5.jpg" 
+                                    alt="Проект Boxes" 
+                                    width="370"
+                                >
+
                                 <p class="project__discription">
                                     Технокряк это современная площадка распространения коронавируса. Компании используют
                                     эту
@@ -180,8 +216,14 @@
                     <li class="project">
                         <a class="project__link" href="#">
                             <div class="project__discription-overlay">
-                                <img class="project__image" src="./images/example6.jpg" alt="Inspiration has no Borders"
-                                    width="370">
+                                <img 
+                                    srcset="./images/example6.jpg 1x, ./images/example6@2x.jpg 2x"
+                                    class="project__image" 
+                                    src="./images/example6.jpg" 
+                                    alt="Inspiration has no Borders"
+                                    width="370"
+                                >
+
                                 <p class="project__discription">
                                     Технокряк это современная площадка распространения коронавируса. Компании используют
                                     эту
@@ -198,8 +240,14 @@
                     <li class="project">
                         <a class="project__link" href="#">
                             <div class="project__discription-overlay">
-                                <img class="project__image" src="./images/example7.jpg" alt="Издание Limited Edition"
-                                    width="370">
+                                <img 
+                                    srcset="./images/example7.jpg 1x, ./images/example7@2x.jpg 2x"
+                                    class="project__image" 
+                                    src="./images/example7.jpg" 
+                                    alt="Издание Limited Edition"
+                                    width="370"
+                                >
+
                                 <p class="project__discription">
                                     Технокряк это современная площадка распространения коронавируса. Компании используют
                                     эту
@@ -216,7 +264,14 @@
                     <li class="project">
                         <a class="project__link" href="#">
                             <div class="project__discription-overlay">
-                                <img class="project__image" src="./images/example8.jpg" alt="Проект LAB" width="370">
+                                <img 
+                                    srcset="./images/example8.jpg 1x, ./images/example8@2x.jpg 2x"
+                                    class="project__image" 
+                                    src="./images/example8.jpg" 
+                                    alt="Проект LAB" 
+                                    width="370"
+                                >
+
                                 <p class="project__discription">
                                     Технокряк это современная площадка распространения коронавируса. Компании используют
                                     эту
@@ -233,7 +288,14 @@
                     <li class="project">
                         <a class="project__link" href="#">
                             <div class="project__discription-overlay">
-                                <img class="project__image" src="./images/example9.jpg" alt="Growing Business" width="370">
+                                <img 
+                                    srcset="./images/example9.jpg 1x, ./images/example9@2x.jpg 2x"
+                                    class="project__image" 
+                                    src="./images/example9.jpg" 
+                                    alt="Growing Business" 
+                                    width="370"
+                                >
+
                                 <p class="project__discription">
                                     Технокряк это современная площадка распространения коронавируса. Компании используют
                                     эту
